--- a/style.css
+++ b/style.css
@@ -31,15 +31,16 @@
 body {
     font-family: PlusJakartaSans;
     color: var(--Very-dark-blue);
-    background-color: var(--Light-grayish-blue-2);
+    background-color: var(--Light-grayish-blue-1);
 }
 p {    
     font-size: 16px;
+    font-weight: 500;
 }
 
 .notifications {
     background-color: var(--White);
-    padding: 1em;
+    padding: 1em ;
     margin: 1em auto 1em auto;
     max-width: 720px;
     border-radius: 10px;
@@ -50,15 +51,93 @@ p {
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    margin: 1em 0;
+    margin: 1em 0 2em 0;
+}
+
+.notifications__header__title{
+    font-size: 1.4em;
+    font-weight: 800;
+}
+
+.notifications__header__title__number {
+    color: var(--White);
+    background-color: var(--Blue);
+    font-size: 0.6em;
+    font-weight: 800;
+    padding: 0.2em 0.8em;
+    border-radius: 5px;
+    margin-left: 0.6em;
+}
+
+.notifications__header__enlace {
+    text-decoration: none;    
+    font-size: 0.9em;
+    font-weight: 800;
+    color: var(--Dark-grayish-blue);
+}
+
+.notifications__header__enlace:hover {
+    color: var(--Blue);
 }
 
 .notifications__container__item {
-    background-color: var(--Light-grayish-blue-1);
-    padding: 1em;
+    background-color: var(--Very-light-grayish-blue);
+    padding: 1em 0;
+    margin-bottom: 1em;
     display: flex;
     flex-direction: row;
-    align-items: center;
+    align-items: center;    
     border-radius: 10px;
 }
 
+.notifications__container__item__avatar {
+    width: 15%;
+    min-width: 64px;
+    text-align: center;
+    align-self: flex-start;
+}
+
+.notificacion__container__item__avatar__img {
+    width: 50%;
+    min-width: 40px;
+    height: auto;
+}
+
+.notifications__container__item__content__resume {
+    margin-bottom: 0.3em;
+    padding-right: 0.4em;
+    line-height: 1em;
+    color: var(--Dark-grayish-blue);
+}
+
+.notifications__container__item__content__resume__enlace{
+    text-decoration: none;
+    color: var(--Very-dark-blue);
+    font-weight: 800;
+}
+
+.notifications__container__item__content__resume__enlace:hover{
+    color: var(--Blue);
+}
+
+.notifications__container__item__bullet{
+    color: var(--Red);
+    font-size: 1.6em;
+    margin-left: 0.4em;    
+    align-self: flex-start;
+}
+
+.notifications__container__item__content__date {
+    color: var(--Grayish-blue);
+}
+
+.bold {
+    font-weight: 800;    
+}
+
+.blue {
+    color: var(--Blue);
+}
+.dark-gray-blue {
+    color: var(--Dark-grayish-blue);
+}
